# tee_seL4_teeos_camkes

./: CMakeLists.txt  README.md  overlay-polarfire_amp.dts  settings.cmake
teeos_components/: CMakeLists.txt  client.c  teeos_amp.camkes
teeos_components/common/: common_defs.h  sel4_crashlog.camkes
teeos_components/ipc_interface/: ipc_interface.h  ipc_interface.idl4
teeos_components/optee_service/: CMakeLists.txt  optee_service.c  optee_service.camkes  sys_ctl_service_api.c
teeos_components/ree_comm/: CMakeLists.txt  ree_comm.c  ree_comm.camkes  ree_comm.h  ree_comm_defs.h  ree_comm_lib.c
teeos_components/sys_ctl/: CMakeLists.txt  sys_ctl.c  sys_ctl.camkes  sys_ctl_defs.h
